tests/NormalTests/paczka1/fuzzy1/43683754.err
Error in line 5: Qs9r28Fp A952 41,3
Error in line 2: 884 S697 17,3
Error in line 18: Wbw96 A952 37,5
Error in line 31: PsgnfngTB2V S744 22,2
Error in line 33: PsgnfngTB2V S697 13,3
